# vote-button

./: .gitignore  LICENSE  Makefile  README  README.md  bower.json  index.html  lighttpd.conf
core/: Makefile
core/backend/: vote-button.cabal
core/backend/public_html/: index.html  screen.css
core/frontend/: bower.json
core/frontend/src/: Main.purs  VoteButton.js  VoteButton.purs
favcolors/: Makefile
favcolors/backend/: favcolors.cabal
favcolors/backend/src/: Main.hs
favcolors/frontend/: bower.json
favcolors/frontend/src/: Main.js  Main.purs  Rest.purs  Types.purs
server/: vote-button.cabal
server/src/: Main.hs
src/: Main.js  Main.purs
