name:                vote-button
version:             0.1.0.0
-- synopsis:
-- description:
license:             AGPL-3
license-file:        LICENSE
author:              Matthias Fischmann
maintainer:          mf@zerobuzz.net
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag profiling
  default: False

executable vote-button
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded -rtsopts
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base           >= 4.7.0.2 && < 4.8
    , acid-state     >= 0.13.0  && < 0.14
    , aeson          >= 0.9.0.1 && < 0.10
    , containers     >= 0.5.5.1 && < 0.6
    , either         >= 4.3     && < 4.5
    , lens           >= 4.12.3  && < 4.13
    , mtl            >= 2.2.1   && < 2.3
    , safecopy       >= 0.8.5   && < 0.9
    , servant        >= 0.4.4   && < 0.5
    , servant-server >= 0.4.4.1 && < 0.5
    , wai            >= 3.0.3.0 && < 3.1
    , warp           >= 3.1.3   && < 3.2
